--- a/templates/telly.config.toml.erb
+++ b/templates/telly.config.toml.erb
@@ -20,10 +20,10 @@
 
 # THIS SECTION IS REQUIRED ########################################################################
 [IPTV]
-  Streams = 1               # number of simultaneous streams that the telly virtual DVR will provide
+  Streams = <%= scope['::telly::streams'] %>               # number of simultaneous streams that the telly virtual DVR will provide
                             # This is often 1, but is set by your iptv provider; for example, 
                             # Vaders provides 5
-  Starting-Channel = 10000  # When telly assigns channel numbers it will start here
+  Starting-Channel = <%= scope['::telly::starting_channel'] %>  # When telly assigns channel numbers it will start here
   XMLTV-Channels = true     # if true, any channel numbers specified in your M3U file will be used.
 # FFMpeg = true             # if this is uncommented, streams are buffered through ffmpeg; 
                             # ffmpeg must be installed and on your $PATH
@@ -37,8 +37,8 @@
 
 # THIS SECTION IS REQUIRED ########################################################################
 [Web]
-  Base-Address = "0.0.0.0:6077"   # Set this to the IP address of the machine telly runs on
-  Listen-Address = "0.0.0.0:6077" # this can stay as-is
+  Base-Address = "0.0.0.0:<%= scope['::telly::port'] %>"   # Set this to the IP address of the machine telly runs on
+  Listen-Address = "0.0.0.0:<%= scope['::telly::port'] %>" # this can stay as-is
 
 # THIS SECTION IS OPTIONAL ========================================================================
 #[SchedulesDirect]           # If you have a Schedules Direct account, fill in details and then
@@ -46,6 +46,7 @@
 #  Username = ""             # This is under construction; Vader is the only provider
 #  Password = ""             # that works with it fully at this time
 
+#TODO add sources hash
 [[Source]]
   Name = "MagicIPV"         # Name is optional and is used mostly for logging purposes
   Provider = "Custom"       # DO NOT CHANGE THIS IF YOU ARE ENTERING URLS OR FILE PATHS
